# SkillLens

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e50e9fd56fdf_initial_schema_companies_and_job_.py
backend/app/: config.py
backend/app/agents/: __init__.py  market_agent.py  profile_agent.py
backend/app/api/: main.py  sse.py
backend/app/api/routes/: profile.py
backend/app/db/: __init__.py  engine.py  models.py  repository.py
backend/app/ingestion/: __init__.py  classify.py  embed.py  normalize.py  pipeline.py  qdrant_store.py  registry.py
backend/app/ingestion/ats/: __init__.py  _http.py  greenhouse.py  lever.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  cost.py  groq_provider.py  router.py
backend/app/models/: __init__.py  gap.py  job.py  market.py  plan.py  profile.py  trace.py
backend/scripts/: generate_resume_fixtures.py
backend/tests/: test_api_profile.py  test_ats_clients.py  test_classify.py  test_market_agent.py  test_models.py  test_normalize.py  test_profile_agent.py  test_qdrant_search.py  test_qdrant_store.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
